--- a/app/src/main/res/layout/business_report_fragment_finance.xml
+++ b/app/src/main/res/layout/business_report_fragment_finance.xml
@@ -180,5 +180,9 @@
         android:layout_weight="2"
         android:background="#75CBA7FD"
         android:divider="@android:color/darker_gray"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="60dp"
         android:dividerHeight="1dp" />
 </LinearLayout>
