--- a/app/src/main/res/layout/business_button_product.xml
+++ b/app/src/main/res/layout/business_button_product.xml
@@ -6,6 +6,19 @@
     android:padding="0dp"
     android:weightSum="9"
     android:background="@drawable/business_background_gradient">
+
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search orders"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@android:color/white"
+        android:drawableStart="@android:drawable/ic_menu_search"
+        android:drawablePadding="8dp"
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -22,7 +35,8 @@
         android:layout_weight="2"
         android:layout_marginTop="16dp"
         android:clipChildren="true"
-        android:gravity="right">
+        android:gravity="right"
+        android:background="#2fc5bf">
 
         <ImageButton
             android:id="@+id/edit_button"
