--- a/app/src/main/res/layout/business_button_storage.xml
+++ b/app/src/main/res/layout/business_button_storage.xml
@@ -6,6 +6,19 @@
     android:padding="0dp"
     android:weightSum="10"
     android:background="@drawable/business_background_gradient">
+
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search orders"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@android:color/white"
+        android:drawableStart="@android:drawable/ic_menu_search"
+        android:drawablePadding="8dp"
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
