--- a/app/src/main/res/layout/business_report_fragment_storage.xml
+++ b/app/src/main/res/layout/business_report_fragment_storage.xml
@@ -26,6 +26,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
             </Spinner>
+            <Spinner
+                android:id="@+id/spinner_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:spinnerMode="dropdown" />
         </LinearLayout>
 
         <LinearLayout
