--- a/app/src/main/res/layout/business_order_edit_item.xml
+++ b/app/src/main/res/layout/business_order_edit_item.xml
@@ -109,16 +109,6 @@
         app:layout_constraintTop_toBottomOf="@id/et_order_edit_ghichu"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <Button
-        android:id="@+id/btn_Add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Thêm sản phẩm"
-        android:textSize="10dp"
-        app:layout_constraintStart_toEndOf="@id/tv_order_edit_listsp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_order_edit_listsp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_order_edit_listsp"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -127,6 +117,15 @@
         app:layout_constraintTop_toBottomOf="@id/tv_order_edit_listsp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/tv_order_edit_total"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tổng cộng: 0"
+        android:textSize="16sp"
+        android:gravity="end"
+        app:layout_constraintTop_toBottomOf="@id/lv_order_edit_sp"
+        android:padding="8dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
