--- a/app/src/main/res/layout/business_report_fragment_storage.xml
+++ b/app/src/main/res/layout/business_report_fragment_storage.xml
@@ -20,12 +20,34 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+            <TextView
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/black"
+                android:text="Tháng">
+
+            </TextView>
+
             <Spinner
                 android:id="@+id/spinner_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
             </Spinner>
+            <TextView
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/black"
+                android:text="Năm">
+
+            </TextView>
             <Spinner
                 android:id="@+id/spinner_year"
                 android:layout_width="wrap_content"
@@ -205,21 +227,21 @@
         android:layout_weight="2"
         android:weightSum="2"
         android:orientation="vertical"
-        android:layout_marginEnd="10dp">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_marginStart="10dp">
+            >
             <TextView
-                android:layout_weight="0"
                 android:id="@+id/tv_report_store_sphethang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="15dp"
+                android:textSize="15sp"
+                android:layout_marginStart="15dp"
                 android:text="Sản phẩm hết hàng"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"/>
@@ -228,7 +250,8 @@
                 android:layout_height="match_parent"
                 android:id="@+id/lv_products_het_hang"
                 android:background="#75CBA7FD"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="25dp"
+                android:layout_marginStart="25dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -236,14 +259,15 @@
             android:layout_weight="1"
             android:weightSum="2"
             android:orientation="vertical"
-            android:layout_marginStart="10dp">
+            >
             <TextView
                 android:id="@+id/tv_report_store_sphuhong"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:text="Sản phẩm hư hỏng"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"/>
             <ListView
@@ -251,7 +275,8 @@
                 android:layout_height="match_parent"
                 android:id="@+id/lv_products_broken"
                 android:background="#75CBA7FD"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="25dp"
+                android:layout_marginStart="25dp"/>
         </LinearLayout>
 
     </LinearLayout>
