Cộng dồn lại chi tiêu khi đã tồn tại cùng loại

--- a/app/src/main/res/layout/ui_dialog_add_expense.xml
+++ b/app/src/main/res/layout/ui_dialog_add_expense.xml
@@ -20,7 +20,7 @@
         android:id="@+id/etAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nhập số lượng"
+        android:hint="Giá tiền"
         android:inputType="numberDecimal" />
 
     <!-- Nút chọn ngày -->
