--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -26,7 +26,14 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/grid" />
+    <Spinner
+        android:id="@+id/year_spinner"
+        android:layout_width="150dp"
+        android:layout_height="42dp"
 
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
     <Spinner
         android:id="@+id/month_spinner"
         android:layout_width="150dp"
@@ -40,7 +47,7 @@
         android:id="@+id/textView5"
         android:layout_width="178dp"
         android:layout_height="42dp"
-        android:layout_marginStart="116dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:padding="10dp"
